# H2

./: ASTNode.hpp  Accumulator.hpp  CMakeLists.txt  CodeParser.cpp  CodeParser.hpp  ComplexityHelper.cpp  ComplexityHelper.hpp  ExecutionPath.cpp  ExecutionPath.hpp  Expression.hpp  FileEditor.cpp  FileEditor.hpp  GlobalVariableManager.cpp  GlobalVariableManager.hpp  LocalVariableManager.cpp  LocalVariableManager.hpp  LogicTerm.hpp  ParsedFunction.hpp  ParserMain.hpp  Readme.md  Token.cpp  Token.hpp  Tokenstream.cpp  Tokenstream.hpp  analyzer.cpp  code_style.cpp  code_style.hpp  compiler.cpp  complexity_term.cpp  complexity_term.hpp  global_information.cpp  global_information.hpp  global_names.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.hpp  recursive_analysis.cpp  recursive_analysis.hpp  term.cpp  (+3 more)
abstract_syntax_tree/: ASTAssignmentNode.cpp  ASTAssignmentNode.hpp  ASTCalculationNode.cpp  ASTCalculationNode.hpp  ASTCallNode.cpp  ASTCallNode.hpp  ASTClassNode.cpp  ASTClassNode.hpp  ASTCommentNode.cpp  ASTCommentNode.hpp  ASTComparisonNode.cpp  ASTComparisonNode.hpp  ASTComputationNode.hpp  ASTControlFlowNode.hpp  ASTFunctionNode.cpp  ASTFunctionNode.hpp  ASTIfElseNode.cpp  ASTIfElseNode.hpp  ASTLogicalNode.cpp  ASTLogicalNode.hpp  ASTNode.cpp  ASTNode.hpp  ASTReturnNode.cpp  ASTReturnNode.hpp  ASTRootNode.cpp  ASTRootNode.hpp  ASTStatementNode.hpp  ASTTree.hpp  ASTVariableNode.cpp  ASTVariableNode.hpp  ASTWhileLoopNode.cpp  ASTWhileLoopNode.hpp  CMakeLists.txt  ast_t.cpp
complexity_analyzer/: ComplexityHelper.hpp  ExecutionPath.cpp  ExecutionPath.hpp  LogicTerm.cpp  analyzer.cpp  recursive_analysis.cpp  recursive_analysis.hpp  virtual_math_term.hpp
old/: Accumulator.hpp  CMakeLists.txt  Expression.hpp  ParsedFunction.hpp  ParserMain.hpp  VarAssignments.hpp  main.cpp  test_setup.sh
resources/: end_linus.txt  end_ray.txt  header.txt  header_ray.txt  next_steps  program.txt  raw.txt
test/: CMakeLists.txt  code_parser_tests.cpp  expression_test.cpp  file_editor_test.cpp  lexer_test.cpp  parser_test.cpp  tokenstream_test.cpp
test/resources/: test_program.txt
